--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
-  <script src="app.js"></script>
+
+  <p>
+    Insert the information in the form and the calculator will determine the straight line deprecation.<br>
+    What is straight line deprecation?<br>
+    With the straight line deprecation method the value of an asset is reduced over each period until it reaches it's salvage value. The straight line deprecation is the most used and straight forward deprecation method for allocating the cost of a capital asset.<br>
+  </p>
+  <img src="./pictures/Capture1.PNG" alt="">
+  <p>
+    How to calculate straight line depreciation?<br>
+    For the calculation of the straight line depreciation we the following formula:<br>
+    straight line depreciation = (purchase cost - salvage value) / useful life assumption<br>
+    Example: A company make a purchase of a machine that costs $120,000 with an estimated salvage value of $30,000 and a useful life of 7 years, calculate the straight line deprecation?<br>
+    Using the straight line formula the answer will be<br>
+    straight line depreciation = (purchase cost - salvage value) / useful life assumption<br>
+    straight line depreciation = ($120,000 - $30,000) / 7<br>
+    straight line deprecation = $12,857<br>
+    therefore the company would depreciate the machine at %12,857 annually for 7 years.<br>
+    Why use straight line deprecation?<br>
+    Straight line deprecation is used because businesses can use it to spread out the investments of long term assets over many years for accounting and tax benefits, As the value of an asset decreases over the years, the amount shown on an accounting balance sheet will affect the annual income.
+  </p>
 </body>
+<script src="app.js"></script>
 </html>
